<resources>
    <string name="app_name">SemiAp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="username_hint1">Username</string>
    <string name="password_hint1">Password</string>
    <string name="login_button_label1">Login</string>
    <string name="sign_up_text1">SignUp!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="sign_up_button_label1">Sign up</string>
</resources>
